# cpp-brickgame

./: README.md
src/: CMakeLists.txt  GUI_snake.cc  GUI_tetris.cc  Makefile  console_snake.cc  console_tetris.cc
src/brick_game/: common.h  controller.h
src/brick_game/snake/: snake_controller.cc  snake_controller.h  snake_model.cc  snake_model.h
src/brick_game/tests/: test_snake_model.cc
src/brick_game/tetris/: defines_tetris.h  fsm.c  fsm.h  objects.h  tetris_backend.c  tetris_backend.h  tetris_controller.cc  tetris_controller.h  tetris_game_info_t_raii.h
src/gui/console/: console_view.cc  console_view.h
src/gui/desktop/: GUI_view.cc  GUI_view.h
